--- a/src/app/components/shared/sebastian/sebastian/sebastian.component.html
+++ b/src/app/components/shared/sebastian/sebastian/sebastian.component.html
@@ -1,3 +1,17 @@
-<p>
-  sebastian works!
-</p>
+<section id="content">
+    <h1 class="subheader">Formulario</h1>
+    <form class="mid-form">
+        <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <input type="text" name="nombre" />
+        </div>
+        <div class="form-group">
+            <label for="apellidos">Apellidos</label>
+            <input type="text" name="apellidos" />
+        </div>
+        <div class="form-group">
+            <label for="bio">Biografia</label>
+            <textarea name="bio"></textarea>
+        </div>
+    </form>
+</section>
