--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<!--The content below is only a placeholder and can be replaced.-->
+<app-geregere></app-geregere>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
