--- a/src/app/components/shared/erick/erick/erick.component.html
+++ b/src/app/components/shared/erick/erick/erick.component.html
@@ -1,3 +1,47 @@
-<p>
-  erick works!
-</p>
+
+	<div class="datosActuales">
+		
+		<div class="today box">
+			<span>jueves 14 nov. de 2019 16:45:59 hrs.</span>
+		</div>
+		
+		<div class="moneda box">
+			<span>Dólar $794,51 UF $28.102,65 IPSA 4.478,34 Portal de Inversiones</span>
+		</div>
+	
+	</div>
+
+	<div class="logo">
+		<img src="img/logo.PNG" alt="Scotiabank">
+	</div>
+	
+	<div class="barRed">
+		<a href="#"><img src="img/arrowsl.png" alt=""><span>Ir al Portal Scotiabank</span></a>
+	</div>
+
+	<div class="containerLogin">
+
+		<div class="formLogin">
+
+			<div class="titulo">
+			<h2>Ingreso Personas</h2>
+			</div>
+			<div class="formDiv">
+				<form action="#">
+					<p><input type="text" placeholder="RUT"></p>
+					<p><input type="text" placeholder="Clave"></p>
+					<br>
+					<p><button>Ingresa a Scotiaweb</button></p>
+					<br>
+					<a href="#"><p>Recuperar mi clave</p></a>
+					<br>
+					<a href="#"><p>Soy Cliente y no puedo ingresar</p></a>
+				</form>
+			</div>
+		</div>
+
+		<div class="containerPad">
+			
+		</div>
+		
+	</div>
