--- a/src/app/components/shared/andy/andy/andy.component.css
+++ b/src/app/components/shared/andy/andy/andy.component.css
@@ -12,6 +12,7 @@ body, html
     color: #ff6;
     background-color: #000;
     overflow: hidden;
+    
 }
 
 p#start
@@ -80,7 +81,9 @@ h1 sub
     overflow: hidden;
     transform-origin: 50% 100%;
     transform: perspective(300px) rotateX(25deg);
+    background-color: black;
 }
+
 
 #titles:after
 {
