--- a/src/app/components/main/header/header.component.html
+++ b/src/app/components/main/header/header.component.html
@@ -1,8 +1,26 @@
 <div class="header">
   <div class="logo"><img class="logo" src="assets/images/bestlogo.jpg"></div>
+
+  <nav class="vinculos">
+    <a routerLink="/pagina2">Página 2</a>
+    <a routerLink="/content">Content</a>
+    <a routerLink="/ximena">Ximena</a>
+    <a routerLink="/sebastian">Sebastian</a>
+    <a routerLink="/erick">Erick</a>
+    <a routerLink="/david">David</a>
+    <a routerLink="/alonso">Alonso</a>
+    <a routerLink="/oliver">Oliver</a>
+    <a routerLink="/hernan">Hernan</a>
+    <a routerLink="/ignacia">Ignacia</a>
+    <a routerLink="/andy">Andy</a>
+    <a routerLink="/nelson">Nelson</a>
+    <a routerLink="/rodrigo">Rodrigo</a>
+    <a routerLink="/fabian">Fabian</a>
+    <a routerLink="/lorena">Lorena</a>
+    <a routerLink="/cristabel">Cristabel</a>
+    <a routerLink="/bastian">Bastian</a>
+    <a routerLink="/camilo">Camilo</a>
+    <a routerLink="/carlos">Carlos</a>
+  </nav>
 </div>
 
-<nav>
-  <a routerLink="/pagina2">Página 2</a>
-  <a routerLink="/content">Content</a>
-</nav>
