--- a/src/app/components/shared/lorena/lorena/lorena.component.html
+++ b/src/app/components/shared/lorena/lorena/lorena.component.html
@@ -1,1 +1,3 @@
-<p>Prueba version 2.0</p>
+<video controls preload >
+        <source src="src/assets/video/video.mp4" type="video/mp4"> 
+    </video>
