--- a/src/app/components/shared/cristabel/cristabel.component.html
+++ b/src/app/components/shared/cristabel/cristabel.component.html
@@ -1,3 +1,12 @@
-<p>
-  cristabel works!
-</p>
+<form action="***" method="get">
+  <p>Nombre: <input type="text" name="nombre" size="40"></p>
+  <p>Fecha de Nac.: <input type="number" name="nacido" min="1900"></p>
+  <p>Sexo:
+    <input type="radio" name="hm" value="h"> Hombre
+    <input type="radio" name="hm" value="m"> Mujer
+  </p>
+  <p>
+    <input type="submit" value="Enviar">
+    <input type="reset" value="Borrar">
+  </p>
+</form>
