--- a/src/app/components/shared/bastian/bastian.component.html
+++ b/src/app/components/shared/bastian/bastian.component.html
@@ -1,3 +1,13 @@
-<p>
-  bastian works!
-</p>
+<div id="formulario">
+  <form method="POST" action="mailto:bastian.daniel.rozas@gmail.com" name="formulario">  
+  <p class="formu">Nombre <br />  
+  <input class="campos" type="text" name="nombre" size="30"></p>  
+  <p class="formu">Apellido <br />  
+  <input class="campos" type="text" name="apellido" size="30"></p>  
+  <p class="formu">E-Mail <br />
+  <input class="campos" type="text" name="email" size="30"></p>  
+  <p class="formu">¿Por que le interesaria participar con nosotros?<br />  
+  <textarea class="campos" cols="30" rows="5" name="mensaje"></textarea></p>  
+  <input class="botonsubmit" type="submit" value="Enviar " name="B1">        
+  </form>  
+  </div>
