--- a/src/app/components/shared/camilo/camilo/camilo.component.html
+++ b/src/app/components/shared/camilo/camilo/camilo.component.html
@@ -1,1 +1,7 @@
 <p>LISTOOOOOOOOOOOOO</p>/p>
+<br>
+<div *ngFor='let user of users'>
+    <img [src]="user.picture.medium">
+    <h2>{{ user.name.first | uppercase }}</h2>
+    <p>{{ user.email }}</p>
+</div>
