--- a/src/app/components/shared/nelson/nelson/nelson.component.css
+++ b/src/app/components/shared/nelson/nelson/nelson.component.css
@@ -9,15 +9,17 @@
     position: relative;
     float: left;
     width: 50%;
-    height: 100%;   
+    height: 100%;
+    border: solid;   
 }
 
 .cuadroDer
 {
     position: relative;
     float: right;
-    width: 50%;
+    width: 49%;
     height: 100%;
+    border: solid;
 }
 
 .tituloForm
@@ -40,5 +42,16 @@ label
     font-size: 20px;
 }
 
+agm-map 
+{
+    height: 1px;
+}
+
+.Mapita
+{
+    border: solid;
+    width: 400px;
+    height: 150px;
+}
 
 
