--- a/src/app/components/shared/nelson/nelson/nelson.component.html
+++ b/src/app/components/shared/nelson/nelson/nelson.component.html
@@ -32,7 +32,16 @@
 
     <div class="cuadroDer">
       <div class="tituloMapa">
-          <h2>Mapa Santiago/Everis Chile</h2>
+          <h2><h1>{{ title }}</h1></h2>
+      </div>
+      <div class="mapa">
+          <h1>{{ title }}</h1>
+
+          <div class="Mapita">
+            
+          </div>
+          
+          
       </div>
       <div>
           
