--- a/src/app/components/shared/nelson/nelson/nelson.component.html
+++ b/src/app/components/shared/nelson/nelson/nelson.component.html
@@ -1,3 +1,5 @@
+
+
 <h1 class="Titulo">Pagina Nelson</h1>
 <div>
 
@@ -32,10 +34,13 @@
 
     <div class="cuadroDer">
       <div class="tituloMapa">
-          <h2>Mapa Santiago/Everis Chile</h2>
+          <h2>Everis Chile</h2>
       </div>
       <div>
-          
+        <div  class="mapita">
+         
+        </div>
+      </div>
+      
     </div>
-    
-</div>
+<!-- <script src=”http://maps.googleapis.com/maps/api/js?key=AIzaSyDKoBw7whEROAY6-didgM2-mI4dFiIDYdI"></script> -->
