foto mapa everis

--- a/src/app/components/shared/nelson/nelson/nelson.component.html
+++ b/src/app/components/shared/nelson/nelson/nelson.component.html
@@ -34,21 +34,9 @@
 
     <div class="cuadroDer">
       <div class="tituloMapa">
-<<<<<<< HEAD
-          <h2>Everis Chile</h2>
-=======
-          <h2><h1>{{ title }}</h1></h2>
+          <h2>Everis</h2>
       </div>
-      <div class="mapa">
-          <h1>{{ title }}</h1>
-
-          <div class="Mapita">
-            
-          </div>
-          
-          
->>>>>>> 3697d172f01df874587952aec8c9feedf343e0a9
-      </div>
+    
       <div>
         <div  class="mapita">
          
