--- a/src/app/components/shared/david/david-falcon/david-falcon.component.html
+++ b/src/app/components/shared/david/david-falcon/david-falcon.component.html
@@ -1,4 +1,4 @@
-<input type="text" class="btn" placeholder="Buscar pais" #nombrePais (keyup.enter)="buscarPais(nombrePais.value)">
+<input type="text" class="btn" placeholder="Buscar pais" #nombrePais (keyup)="buscarPais(nombrePais.value)">
 
 
 <span *ngIf="ocultar" class="color">No existen resultados con el termino {{valor}}</span>
@@ -15,7 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let pais of resultado; let i = index">
+        <tr *ngFor="let pais of resultados; let i = index">
             <th>{{i + 1}}</th>
             <th>{{ pais.name }}</th>
             <td>{{ pais.population}}</td>
