--- a/src/app/components/shared/david/david-falcon/david-falcon.component.html
+++ b/src/app/components/shared/david/david-falcon/david-falcon.component.html
@@ -15,7 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let pais of resultado; let i = index">
+        <tr *ngFor="let pais of resultados; let i = index">
             <th>{{i + 1}}</th>
             <th>{{ pais.name }}</th>
             <td>{{ pais.population}}</td>
