--- a/src/app/components/shared/lorena/lorena/lorena.component.html
+++ b/src/app/components/shared/lorena/lorena/lorena.component.html
@@ -1,3 +1,52 @@
-<video controls preload >
-        <source src="src/assets/video/video.mp4" type="video/mp4"> 
-    </video>
+<main>
+    <section id="banner">
+        <img src="./assets/img/3f.jpg"/>
+        <section class="contenedor">
+        <h2>Bienvenidos a la empresa Lamba</h2>
+        <p>"Entendemos en profundidad por lo que pasan los empresarios y emprendedores que ven sus cobros extendidos en el tiempo. </p>
+        <p>Los servicios, las empresas, los proyectos necesitan capitales para mantenerse en pie.</p><p> Nosotros somos claves en apoyar y acompañar su desarrollo."</p>
+        </section>
+    </section>
+    <section id="login">
+        <h2>Login</h2>
+        <section class="contenedor">
+        <form action="">
+            <p class="p0">Ingrese sus datos para acceder</p>
+            <input type="text" placeholder="Usuario"/><br>
+            <input type="text" placeholder="Rut"/><br>
+            <input type="submit" value="Ingresar"/>
+        </form>
+        </section>
+    </section>
+    <section id="infromacion">
+        <h2>Poporcionar tipo de información y asistencia a usuarios</h2>
+        <p>¿Cual es la mejor forma de atención para usted?</p>
+        <a href="#">Leer más</a>
+    </section>  
+     <section id="emp">
+        <h3>Nuestro holding de empresas en el país. </h3>
+        <div class="contenedor">
+           <div class="info-emp">
+                <img src="./assets/img/f4.jpg" alt="">
+               <h4>Santiago</h4>
+            </div>
+            <div class="info-emp">
+                <img src="./assets/img/f5.jpg" alt="">
+               <h4>Temuco</h4>
+            </div>
+            <div class="info-emp">
+                <img src="./assets/img/f6.jpg" alt="">
+               <h4>Valdivia</h4>
+            </div>
+            <div class="info-emp">
+                <img src="./assets/img/f7.jpg" alt="">
+               <h4>Valdivia</h4>
+            </div>
+         </div>
+    </section>
+</main>
+<footer>
+    <div class="contenedor">
+        <p class="copy">Recepcion de Facturas &copy; 2019</p>
+    </div>
+</footer>
