--- a/src/app/components/shared/david/david-falcon/david-falcon.component.css
+++ b/src/app/components/shared/david/david-falcon/david-falcon.component.css
@@ -1,9 +1,41 @@
-.table {
-    width: 100%;
-    margin: 0 auto;
+.container {
+    /* background-color: black; */
+    color: #000000
+}
+
+.btn {
+    display: block;
+    padding: 20px 30px;
+    background: red;
+    border: none;
+    color: white;
 }
 
 .container {
-    background-color: black;
-    color: #ffffff;
+    width: 100%;
+    margin: 0 auto !important;
+}
+
+.boton {
+    width: 33%;
+    text-align: center;
+    margin: 0 auto;
+    padding: 15px;
+    margin: 20px;
+    background: rgba(01, 01, 01, .8);
+    border: none;
+    color: white;
+}
+
+table .primera {
+    margin: 30px 0;
+}
+
+table {
+    background: #000000;
+    color: white !important;
+}
+
+tbody {
+    color: white;
 }
