--- a/src/app/components/shared/david/david-falcon/david-falcon.component.html
+++ b/src/app/components/shared/david/david-falcon/david-falcon.component.html
@@ -1,39 +1,11 @@
-<input type="text" class="btn" placeholder="Buscar pais" #nombrePais (keyup)="buscarPais(nombrePais.value)">
+<div class="container">
+
+    <input type="text" class="boton" placeholder="Buscar pais" #nombrePais (keyup)="buscarPais(nombrePais.value)">
+
+    <span *ngIf="ocultar" class="color">No existen resultados con el termino {{valor}}</span>
 
 
-<span *ngIf="ocultar" class="color">No existen resultados con el termino {{valor}}</span>
-
-
-<table *ngIf="mostrar" class="table">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Pais</th>
-            <th scope="col">Poblacion</th>
-            <th scope="col">Capital</th>
-
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let pais of resultados; let i = index">
-            <th>{{i + 1}}</th>
-            <th>{{ pais.name }}</th>
-            <td>{{ pais.population}}</td>
-            <td>{{ pais.capital }}</td>
-
-        </tr>
-    </tbody>
-</table>
-
-
-
-
-
-
-
-
-<table class="table">
-    <div class="container">
+    <table class="primera" *ngIf="mostrar" class="table">
         <thead>
             <tr>
                 <th scope="col">#</th>
@@ -41,16 +13,49 @@
                 <th scope="col">Poblacion</th>
                 <th scope="col">Capital</th>
 
+
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let pais of paises; let i = index">
+            <tr *ngFor="let pais of resultados; let i = index">
                 <th>{{i + 1}}</th>
-                <th>{{pais.name}}</th>
+                <th>{{ pais.name }}</th>
                 <td>{{ pais.population}}</td>
-                <td>{{pais.capital}}</td>
+                <td>{{ pais.capital }}</td>
 
             </tr>
         </tbody>
-    </div>
-</table>
+    </table>
+
+
+
+
+
+
+
+
+    <table>
+        <div class="container">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Pais</th>
+                    <th scope="col">Poblacion</th>
+                    <th scope="col">Capital</th>
+                    <th scope="col">Consulta</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let pais of paises; let i = index">
+                    <th>{{i + 1}}</th>
+                    <th>{{pais.name}}</th>
+                    <td>{{ pais.population}}</td>
+                    <td>{{pais.capital}}</td>
+                    <td><button (click)="mostrarDetalles(pais.flag)" class="btn"> ver detalles </button></td>
+
+                </tr>
+            </tbody>
+        </div>
+    </table>
+</div>
