--- a/src/app/components/shared/david/david-falcon/david-falcon.component.css
+++ b/src/app/components/shared/david/david-falcon/david-falcon.component.css
@@ -12,6 +12,7 @@
 }
 
 .container {
+    float: left;
     width: 100%;
     margin: 0 auto !important;
 }
@@ -38,4 +39,8 @@ table {
 
 tbody {
     color: white;
+}
+
+.derecha{
+    float: right;
 }
