--- a/src/app/components/shared/nelson/nelson/nelson.component.css
+++ b/src/app/components/shared/nelson/nelson/nelson.component.css
@@ -55,6 +55,14 @@ label
 {
     width: 400px;
     height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gerere
+{
+   
 }
 
 
