falta hacer el filtrar

--- a/src/app/components/shared/alonso/alonso.component.html
+++ b/src/app/components/shared/alonso/alonso.component.html
@@ -1,21 +1,48 @@
-<<<<<<< HEAD
-<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a class="active" href="#about">About</a></li>
-</ul>
-=======
-<form action="ejemplo.php" method="get">
-  <p>Nombre: <input type="text" name="nombre" size="40"></p>
-  <p>Año de nacimiento: <input type="number" name="nacido" min="1900"></p>
-  <p>Sexo:
-    <input type="radio" name="hm" value="h"> Hombre
-    <input type="radio" name="hm" value="m"> Mujer
-  </p>
-  <p>
-    <input type="submit" value="Enviar">
-    <input type="reset" value="Borrar">
-  </p>
-</form>
->>>>>>> 4c1292ac7c80886bd804a7468f3ed7b683e93059
+<table class="filtrar">
+  <tr>
+      <th><p>ID:</p>  
+          <input name="id" placeholder="id"></th>
+      <th><p>NAME:</p>
+          <input name="text" placeholder="name"></th>
+      <th><p>EMAIL:</p>
+          <input name="email" placeholder="email"></th>
+      <th><button (click)="BusquedaID(user.company)">Buscar Dato</button></th>
+  </tr>     
+</table>
+
+
+<h2>Usuarios</h2>
+<table class="personal">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>NAME</th>
+      <th>EMAIL</th>
+      <th>ADDRESS</th>
+      <th>CITY</th>
+      <th>PHONE</th>
+      <th>WEB</th>
+      <th>INFORMATION</th>
+    </tr>
+  </thead>
+    <tr *ngFor="let user of userDetalle">
+      <td>{{user.id}}</td>
+      <td>{{user.name}}</td>
+      <td>{{user.email}}</td>
+      <td>{{user.address.city}} {{user.address.street}} {{user.address.suite}} {{user.address.zipcode}}</td>
+      <td>{{user.username}}</td>
+      <td>{{user.phone}}</td>
+      <td>{{user.website}}</td>
+      <td><button (click)="EnviarInfoEmpleados(user.company)"> Additional Info</button></td>
+    </tr>
+</table>
+
+<div class="detalleP">
+  <app-detalle-persona [detalle]="detalles"></app-detalle-persona>
+</div>
+
+<div style="clear:both"></div>
+
+
+
+
