--- a/src/app/components/shared/nelson/nelson/nelson.component.css
+++ b/src/app/components/shared/nelson/nelson/nelson.component.css
@@ -60,9 +60,29 @@ label
     align-items: center;
 }
 
-.gerere
+.tabla
 {
-   
+    float: left;
+    width: 70%;
 }
+
+th
+{
+    border: solid;
+    border-color: red;
+}
+
+td
+{
+    border: solid;
+    border-color: blue;
+}
+
+table
+{
+    border:solid;
+}
+
+
 
 
