Item BS corregido en el componente oculto

--- a/src/app/components/shared/nelson/component-oculto/component-oculto.component.html
+++ b/src/app/components/shared/nelson/component-oculto/component-oculto.component.html
@@ -2,11 +2,11 @@
   <tr>
     <th>NAME</th>
     <th>CATCH PHRASE</th>
-    <th>TD</th>
+    <th>BS</th>
   </tr>
   <tr>
     <td>{{detalleCompany?.name}}</td>
     <td>{{detalleCompany?.catchPhrase}}</td>
-    <td>{{detalleCompany?.td}}</td>
+    <td>{{detalleCompany?.bs}}</td>
   </tr>
 </table>
