--- a/src/app/components/shared/nelson/filtrador/filtrador.component.html
+++ b/src/app/components/shared/nelson/filtrador/filtrador.component.html
@@ -4,6 +4,34 @@
     <p> Ingrese ID: <input type="text" placeholder="ID debe ser del 1 al 10" #idDatos > 
       <button (click)="RescatarDatos(idDatos.value);"> Buscar</button> </p>
       
-  </form>
-    
+  </form>    
+</div>
+
+<div class="tabla">
+  <table class="tg sizeTable">
+    <tr>
+      <th>ID</th>
+      <th>NOMBRE</th>
+      <th>Email</th>
+      <th>DIreccion</th>
+      <th>Username</th>
+      <th>Telefono</th>
+      <th>Web</th>
+      <th>acciones</th>
+    </tr>
+    <tr *ngFor="let user of users">
+      <td class="tg-pmnd">{{user.id}}</td>
+      <td class="tg-pmnd">{{user.name}}</td>
+      <td class="tg-pmnd">{{user.email}}</td>
+      <td class="tg-pmnd">{{user.address.city}} {{user.address.street}} {{user.address.suite}} {{user.address.zipcode}}</td>
+      <td class="tg-pmnd">{{user.username}}</td>
+      <td class="tg-pmnd">{{user.phone}}</td>
+      <td class="tg-pmnd">{{user.website}}</td>
+      <td><button (click)="VerInfo(user.company)"> Ver </button></td>
+    </tr>
+  </table>
+</div>
+
+<div *ngIf="show">
+  <app-component-oculto [detalleCompany]="companyDetalle"></app-component-oculto>
 </div>
